[package]
name = "radix-clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "1.0.0"
maybe-async = "0.2.9"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
rust_decimal = "1.34.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
tokio = "1.36.0"
