[package]
name = "radix-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gateway", "core"]
gateway = []
core = []


[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
duplicate = "1.0.0"
log = "0.4.21"
maybe-async = "0.2.9"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
rust_decimal = "1.34.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
serde_path_to_error = "0.1.16"

[dev-dependencies]
tokio = "1.36.0"
